--- a/Demo/src/css/style.css
+++ b/Demo/src/css/style.css
@@ -1,6 +1,33 @@
-.container {
-  margin: auto;
-  position: fixed;
-  top: 20%;
-  left: 50%;
+.demo .container {
+  min-height: 47vh;
+  margin-top: 100px;
+  margin-bottom: 100px;
+}
+.demo .container .error {
+  color: red;
+  font-weight: normal;
+}
+.demo .container .fromInput {
+  padding: 10px 0px;
+}
+.demo .container .step4 .btn4 {
+  background-color: red;
+  color: white;
+}
+.demo .container .radiobutton {
+  padding: 20px 0px;
+}
+#footer {
+  background-color: #efefef;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding-top: 20px;
+}
+#footer .container {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+#footer .footer-copyright {
+  padding: 20px 0px;
 }
