--- a/Demo/src/less/_layouts_LiemBuu.less
+++ b/Demo/src/less/_layouts_LiemBuu.less
@@ -1,6 +1,37 @@
-.container {
-    margin: auto;
-    position: fixed;
-    top: 20%;
-    left: 50%;
+.demo {
+    .container {
+        min-height: 47vh;
+        margin-top: 100px;
+        margin-bottom: 100px;
+        .error {
+            color: red;
+            font-weight: normal;
+        }
+        .fromInput {
+            padding: 10px 0px;
+        }
+        .step4 {
+            .btn4{
+            background-color: red;
+            color: white;
+            }
+        }
+        .radiobutton {
+            padding: 20px 0px;
+        }    
+    }
+}
+#footer {
+    background-color: #efefef;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding-top: 20px;
+    .container {
+        margin-top: 20px;
+        margin-bottom: 20px;
+    }
+    .footer-copyright {
+        padding: 20px 0px;
+    }
 }
